--- a/archives/toutiao-search/2023-10-23.md
+++ b/archives/toutiao-search/2023-10-23.md
@@ -1,48 +1,68 @@
 # 2023-10-23
 
-共 179 条
+共 194 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Oct 23 2023 12:00:38 GMT+0800 (China Standard Time) -->
-1. [广东汕头发生5.0级地震](https://so.toutiao.com/search?keyword=广东汕头发生5.0级地震)
-1. [券商：A股悲观情绪已步入极值区域](https://so.toutiao.com/search?keyword=券商：A股悲观情绪已步入极值区域)
+<!-- 最后更新时间 Mon Oct 23 2023 13:00:48 GMT+0800 (China Standard Time) -->
+1. [以军将对加沙发动持续3个月地面攻势](https://so.toutiao.com/search?keyword=以军将对加沙发动持续3个月地面攻势)
+1. [国家烟草专卖局原局长凌成兴被查](https://so.toutiao.com/search?keyword=国家烟草专卖局原局长凌成兴被查)
 1. [今日重阳节](https://so.toutiao.com/search?keyword=今日重阳节)
-1. [青岛啤酒视频相关人员已被警方控制](https://so.toutiao.com/search?keyword=青岛啤酒视频相关人员已被警方控制)
-1. [现场视频：中方阻拦菲方挑衅船只](https://so.toutiao.com/search?keyword=现场视频：中方阻拦菲方挑衅船只)
+1. [券商：A股悲观情绪已步入极值区域](https://so.toutiao.com/search?keyword=券商：A股悲观情绪已步入极值区域)
+1. [官方通报“执法人员偷红高粱”：已行拘](https://so.toutiao.com/search?keyword=官方通报“执法人员偷红高粱”：已行拘)
 1. [巴以冲突已致双方超6100人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超6100人死亡)
-1. [富士康被查有何玄机](https://so.toutiao.com/search?keyword=富士康被查有何玄机)
-1. [菲律宾船擅闯仁爱礁 擦碰我舰舰艏](https://so.toutiao.com/search?keyword=菲律宾船擅闯仁爱礁+擦碰我舰舰艏)
-1. [警方辟谣针织厂老板克扣工资被杀](https://so.toutiao.com/search?keyword=警方辟谣针织厂老板克扣工资被杀)
+1. [现场视频：中方阻拦菲方挑衅船只](https://so.toutiao.com/search?keyword=现场视频：中方阻拦菲方挑衅船只)
 1. [曝蒋大为武汉商演遭遇冷场](https://so.toutiao.com/search?keyword=曝蒋大为武汉商演遭遇冷场)
+1. [警方辟谣针织厂老板克扣工资被杀](https://so.toutiao.com/search?keyword=警方辟谣针织厂老板克扣工资被杀)
+1. [应莹：A股将在2900点左右出现底部](https://so.toutiao.com/search?keyword=应莹：A股将在2900点左右出现底部)
+1. [加沙“地面战”为何已难以避免](https://so.toutiao.com/search?keyword=加沙“地面战”为何已难以避免)
+1. [富士康被查有何玄机](https://so.toutiao.com/search?keyword=富士康被查有何玄机)
+1. [纽约发生大规模反以色列抗议活动](https://so.toutiao.com/search?keyword=纽约发生大规模反以色列抗议活动)
+1. [与保安起冲突孕妇被撞致胎死腹中](https://so.toutiao.com/search?keyword=与保安起冲突孕妇被撞致胎死腹中)
+1. [网友吐槽00后女儿不知道东西南北](https://so.toutiao.com/search?keyword=网友吐槽00后女儿不知道东西南北)
+1. [新疆班主任点名能点一节课](https://so.toutiao.com/search?keyword=新疆班主任点名能点一节课)
+1. [今日午盘两市共31股涨停](https://so.toutiao.com/search?keyword=今日午盘两市共31股涨停)
+1. [广东汕头发生5.0级地震](https://so.toutiao.com/search?keyword=广东汕头发生5.0级地震)
+1. [马德兴：中青赛决赛技战术含量太低](https://so.toutiao.com/search?keyword=马德兴：中青赛决赛技战术含量太低)
+1. [学生课堂上锁喉老师暴露了哪些问题](https://so.toutiao.com/search?keyword=学生课堂上锁喉老师暴露了哪些问题)
+1. [可可西里一头狼被投喂变胖成网红](https://so.toutiao.com/search?keyword=可可西里一头狼被投喂变胖成网红)
+1. [宋凯：用10年让中国足球恢复健康](https://so.toutiao.com/search?keyword=宋凯：用10年让中国足球恢复健康)
+1. [俄刚退出禁核试条约美就进行核试验](https://so.toutiao.com/search?keyword=俄刚退出禁核试条约美就进行核试验)
+1. [美舰突然横插挤压中国军舰视频曝光](https://so.toutiao.com/search?keyword=美舰突然横插挤压中国军舰视频曝光)
+1. [女生晒自己大一和研一区别](https://so.toutiao.com/search?keyword=女生晒自己大一和研一区别)
+1. [警方称正调查青岛啤酒三厂小便事件](https://so.toutiao.com/search?keyword=警方称正调查青岛啤酒三厂小便事件)
+1. [2024国考：215个岗位仍无人报考](https://so.toutiao.com/search?keyword=2024国考：215个岗位仍无人报考)
+1. [美进行“地下核试验” 俄专家警告](https://so.toutiao.com/search?keyword=美进行“地下核试验”+俄专家警告)
+1. [女生被抱摔门牙断裂 男同学拒赔](https://so.toutiao.com/search?keyword=女生被抱摔门牙断裂+男同学拒赔)
+1. [赖清德称台商在大陆投资功劳大被怼](https://so.toutiao.com/search?keyword=赖清德称台商在大陆投资功劳大被怼)
+1. [团伙用26000部手机刷直播间人气](https://so.toutiao.com/search?keyword=团伙用26000部手机刷直播间人气)
+1. [今年支原体感染的孩子为何这么多](https://so.toutiao.com/search?keyword=今年支原体感染的孩子为何这么多)
+1. [雷军谈小米“新十年目标”](https://so.toutiao.com/search?keyword=雷军谈小米“新十年目标”)
+1. [澳总理为何在赴美前宣布访华行程](https://so.toutiao.com/search?keyword=澳总理为何在赴美前宣布访华行程)
+1. [跌破3000点后抄底还是止损](https://so.toutiao.com/search?keyword=跌破3000点后抄底还是止损)
+1. [郭台铭连署出事 台检方约谈上百人](https://so.toutiao.com/search?keyword=郭台铭连署出事+台检方约谈上百人)
+1. [北约：有足够资源支持以色列乌克兰](https://so.toutiao.com/search?keyword=北约：有足够资源支持以色列乌克兰)
+1. [张大奕自曝被代购骗1000多万](https://so.toutiao.com/search?keyword=张大奕自曝被代购骗1000多万)
+1. [韩国进口泡菜99%来自中国](https://so.toutiao.com/search?keyword=韩国进口泡菜99%来自中国)
+1. [媒体评“唯第一学历论”](https://so.toutiao.com/search?keyword=媒体评“唯第一学历论”)
+1. [90后“老将”是旗手更是体育传承人](https://so.toutiao.com/search?keyword=90后“老将”是旗手更是体育传承人)
+1. [黑客攻破菲律宾政府部门网站](https://so.toutiao.com/search?keyword=黑客攻破菲律宾政府部门网站)
+1. [俄罗斯外长将赴伊朗与多国外长会晤](https://so.toutiao.com/search?keyword=俄罗斯外长将赴伊朗与多国外长会晤)
+1. [50余万“读书钱”被19岁儿子转女友](https://so.toutiao.com/search?keyword=50余万“读书钱”被19岁儿子转女友)
+1. [媒体：赖清德的路越走越窄](https://so.toutiao.com/search?keyword=媒体：赖清德的路越走越窄)
+1. [台亲绿民调：赖清德支持度跌破30%](https://so.toutiao.com/search?keyword=台亲绿民调：赖清德支持度跌破30%)
+1. [火锅店老板娘化身机器人给顾客敬酒](https://so.toutiao.com/search?keyword=火锅店老板娘化身机器人给顾客敬酒)
+1. [拍摄者回应黄磊摔观众手机](https://so.toutiao.com/search?keyword=拍摄者回应黄磊摔观众手机)
+1. [网络峰会CEO因批评以色列被迫辞职](https://so.toutiao.com/search?keyword=网络峰会CEO因批评以色列被迫辞职)
+1. [来自爷爷奶奶的疼爱](https://so.toutiao.com/search?keyword=来自爷爷奶奶的疼爱)
+1. [青岛啤酒视频相关人员已被警方控制](https://so.toutiao.com/search?keyword=青岛啤酒视频相关人员已被警方控制)
+1. [菲律宾船擅闯仁爱礁 擦碰我舰舰艏](https://so.toutiao.com/search?keyword=菲律宾船擅闯仁爱礁+擦碰我舰舰艏)
 1. [美国起草涉巴以决议草案没呼吁停火](https://so.toutiao.com/search?keyword=美国起草涉巴以决议草案没呼吁停火)
 1. [以色列民众集会要求内塔尼亚胡下台](https://so.toutiao.com/search?keyword=以色列民众集会要求内塔尼亚胡下台)
 1. [青啤“小便风波”如何化解](https://so.toutiao.com/search?keyword=青啤“小便风波”如何化解)
-1. [国家烟草专卖局原局长凌成兴被查](https://so.toutiao.com/search?keyword=国家烟草专卖局原局长凌成兴被查)
-1. [郭台铭连署出事 台检方约谈上百人](https://so.toutiao.com/search?keyword=郭台铭连署出事+台检方约谈上百人)
-1. [应莹：A股将在2900点左右出现底部](https://so.toutiao.com/search?keyword=应莹：A股将在2900点左右出现底部)
-1. [网友吐槽00后女儿不知道东西南北](https://so.toutiao.com/search?keyword=网友吐槽00后女儿不知道东西南北)
-1. [官方通报“执法人员偷红高粱”：已行拘](https://so.toutiao.com/search?keyword=官方通报“执法人员偷红高粱”：已行拘)
 1. [赖岳谦：美方对赖清德发警告](https://so.toutiao.com/search?keyword=赖岳谦：美方对赖清德发警告)
-1. [美舰突然横插挤压中国军舰视频曝光](https://so.toutiao.com/search?keyword=美舰突然横插挤压中国军舰视频曝光)
-1. [可可西里一头狼被投喂变胖成网红](https://so.toutiao.com/search?keyword=可可西里一头狼被投喂变胖成网红)
-1. [学生课堂上锁喉老师暴露了哪些问题](https://so.toutiao.com/search?keyword=学生课堂上锁喉老师暴露了哪些问题)
-1. [澳总理为何在赴美前宣布访华行程](https://so.toutiao.com/search?keyword=澳总理为何在赴美前宣布访华行程)
-1. [女生被抱摔门牙断裂 男同学拒赔](https://so.toutiao.com/search?keyword=女生被抱摔门牙断裂+男同学拒赔)
-1. [新疆班主任点名能点一节课](https://so.toutiao.com/search?keyword=新疆班主任点名能点一节课)
-1. [来自爷爷奶奶的疼爱](https://so.toutiao.com/search?keyword=来自爷爷奶奶的疼爱)
-1. [赖清德称台商在大陆投资功劳大被怼](https://so.toutiao.com/search?keyword=赖清德称台商在大陆投资功劳大被怼)
-1. [纽约发生大规模反以色列抗议活动](https://so.toutiao.com/search?keyword=纽约发生大规模反以色列抗议活动)
 1. [肇庆市政法委原书记王哲被查](https://so.toutiao.com/search?keyword=肇庆市政法委原书记王哲被查)
-1. [团伙用26000部手机刷直播间人气](https://so.toutiao.com/search?keyword=团伙用26000部手机刷直播间人气)
 1. [60岁女子多次盗窃百余件衣物被抓](https://so.toutiao.com/search?keyword=60岁女子多次盗窃百余件衣物被抓)
-1. [网络峰会CEO因批评以色列被迫辞职](https://so.toutiao.com/search?keyword=网络峰会CEO因批评以色列被迫辞职)
-1. [火锅店老板娘化身机器人给顾客敬酒](https://so.toutiao.com/search?keyword=火锅店老板娘化身机器人给顾客敬酒)
-1. [雷军谈小米“新十年目标”](https://so.toutiao.com/search?keyword=雷军谈小米“新十年目标”)
-1. [韩国进口泡菜99%来自中国](https://so.toutiao.com/search?keyword=韩国进口泡菜99%来自中国)
 1. [英媒：为何拉法口岸对加沙至关重要](https://so.toutiao.com/search?keyword=英媒：为何拉法口岸对加沙至关重要)
-1. [50余万“读书钱”被19岁儿子转女友](https://so.toutiao.com/search?keyword=50余万“读书钱”被19岁儿子转女友)
-1. [张大奕自曝被代购骗1000多万](https://so.toutiao.com/search?keyword=张大奕自曝被代购骗1000多万)
-1. [跌破3000点后抄底还是止损](https://so.toutiao.com/search?keyword=跌破3000点后抄底还是止损)
 1. [学校否认学生就餐时间只有20分钟](https://so.toutiao.com/search?keyword=学校否认学生就餐时间只有20分钟)
 1. [探花亨德森能否扛起撕裂之城的大旗](https://so.toutiao.com/search?keyword=探花亨德森能否扛起撕裂之城的大旗)
 1. [倪妮“河南分妮”：喜提休假一周](https://so.toutiao.com/search?keyword=倪妮“河南分妮”：喜提休假一周)
@@ -51,9 +71,7 @@
 1. [宋凯与球迷互动：我也是鲁能球迷](https://so.toutiao.com/search?keyword=宋凯与球迷互动：我也是鲁能球迷)
 1. [卷了15年的双11能回到起点吗](https://so.toutiao.com/search?keyword=卷了15年的双11能回到起点吗)
 1. [老年团列车上跳唱3小时](https://so.toutiao.com/search?keyword=老年团列车上跳唱3小时)
-1. [2024国考：215个岗位仍无人报考](https://so.toutiao.com/search?keyword=2024国考：215个岗位仍无人报考)
 1. [港媒：美国打压可能令中国东北重振](https://so.toutiao.com/search?keyword=港媒：美国打压可能令中国东北重振)
-1. [拍摄者回应黄磊摔观众手机](https://so.toutiao.com/search?keyword=拍摄者回应黄磊摔观众手机)
 1. [重阳节的“数字密码”](https://so.toutiao.com/search?keyword=重阳节的“数字密码”)
 1. [以军称将发起摧毁哈马斯的行动](https://so.toutiao.com/search?keyword=以军称将发起摧毁哈马斯的行动)
 1. [鸿海集团回应富士康被税务部门调查](https://so.toutiao.com/search?keyword=鸿海集团回应富士康被税务部门调查)
@@ -95,7 +113,6 @@
 1. [奶奶拾废品捡回饮料 兄妹喝后中毒](https://so.toutiao.com/search?keyword=奶奶拾废品捡回饮料+兄妹喝后中毒)
 1. [6万以色列人将从黎以边境城镇撤离](https://so.toutiao.com/search?keyword=6万以色列人将从黎以边境城镇撤离)
 1. [一家三口相继感染支原体肺炎](https://so.toutiao.com/search?keyword=一家三口相继感染支原体肺炎)
-1. [媒体评“唯第一学历论”](https://so.toutiao.com/search?keyword=媒体评“唯第一学历论”)
 1. [任泽平：是该大力提振股市了](https://so.toutiao.com/search?keyword=任泽平：是该大力提振股市了)
 1. [阿姨跳舞也不忘牵好自家狗子](https://so.toutiao.com/search?keyword=阿姨跳舞也不忘牵好自家狗子)
 1. [15位中央巡视组组长全部亮相](https://so.toutiao.com/search?keyword=15位中央巡视组组长全部亮相)
@@ -111,7 +128,6 @@
 1. [谁给了东方甄选会员费199元的勇气](https://so.toutiao.com/search?keyword=谁给了东方甄选会员费199元的勇气)
 1. [官方：多种呼吸道传染病或共同流行](https://so.toutiao.com/search?keyword=官方：多种呼吸道传染病或共同流行)
 1. [中国科学院院士、数学家杨乐逝世](https://so.toutiao.com/search?keyword=中国科学院院士、数学家杨乐逝世)
-1. [以军将对加沙发动持续3个月地面攻势](https://so.toutiao.com/search?keyword=以军将对加沙发动持续3个月地面攻势)
 1. [老奶奶地铁站内弹《歌唱祖国》](https://so.toutiao.com/search?keyword=老奶奶地铁站内弹《歌唱祖国》)
 1. [以色列连夜空袭加沙致超50人死亡](https://so.toutiao.com/search?keyword=以色列连夜空袭加沙致超50人死亡)
 1. [官方：蛇类可以食用是谣言](https://so.toutiao.com/search?keyword=官方：蛇类可以食用是谣言)
@@ -142,7 +158,6 @@
 1. [LOL-S13：T1战胜C9](https://so.toutiao.com/search?keyword=LOL-S13：T1战胜C9)
 1. [俄军用反坦克导弹打击乌军人员](https://so.toutiao.com/search?keyword=俄军用反坦克导弹打击乌军人员)
 1. [伊拉克武装宣布对美军基地遭袭负责](https://so.toutiao.com/search?keyword=伊拉克武装宣布对美军基地遭袭负责)
-1. [俄刚退出禁核试条约美就进行核试验](https://so.toutiao.com/search?keyword=俄刚退出禁核试条约美就进行核试验)
 1. [外媒分析数据：中国芯片转折点来了](https://so.toutiao.com/search?keyword=外媒分析数据：中国芯片转折点来了)
 1. [记者调查第一学历歧视现象](https://so.toutiao.com/search?keyword=记者调查第一学历歧视现象)
 1. [以军要求加沙居民尽快撤离至南部](https://so.toutiao.com/search?keyword=以军要求加沙居民尽快撤离至南部)
